DNS in lowercase instead of uppercase

--- a/dns/centos8dns.cfg
+++ b/dns/centos8dns.cfg
@@ -18,7 +18,7 @@ lang en_US.UTF-8
 
 # Network information
 network  --bootproto=static --ip=192.168.2.3 --gateway=192.168.2.254 --nameserver=192.168.2.254 --netmask=255.255.255.0 --ipv6=auto --device=eth0 --activate
-network  --hostname=DNS.mydomain.org
+network  --hostname=dns.mydomain.org
 #Root password
 rootpw --lock
 # Run the Setup Agent on first boot
@@ -61,14 +61,14 @@ kexec-tools
     echo "\$TTL 86400" > /var/named/mydomain.org
     echo "\$ORIGIN mydomain.org." >> /var/named/mydomain.org
     echo "" >> /var/named/mydomain.org
-    echo "@ IN SOA DNS.mydomain.org. info.mydomain.org. (" >> /var/named/mydomain.org
+    echo "@ IN SOA dns.mydomain.org. info.mydomain.org. (" >> /var/named/mydomain.org
     echo "    2020021200" >> /var/named/mydomain.org
     echo "    3600" >> /var/named/mydomain.org
     echo "    1800" >> /var/named/mydomain.org
     echo "    604800" >> /var/named/mydomain.org
     echo "    86400)" >> /var/named/mydomain.org
-    echo "@ IN NS DNS.mydomain.org." >> /var/named/mydomain.org
-    echo "DNS     IN A 192.168.2.3" >> /var/named/mydomain.org
+    echo "@ IN NS dns.mydomain.org." >> /var/named/mydomain.org
+    echo "dns     IN A 192.168.2.3" >> /var/named/mydomain.org
     echo "server1 IN A 192.168.2.11" >> /var/named/mydomain.org
     echo "server2 IN A 192.168.2.12" >> /var/named/mydomain.org
 
